@@ -1,3 +1,9 @@
+unreleased
+
+* Enhancements
+
+  * allow #the_geom_geojson = Hash (used to only allow strings)
+
 0.1.3 / 2015-02-16
 
 * Enhancements
